svn path=/branches/v0.5.3-DeferredLightning/; revision=282

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -14,6 +14,9 @@
 		/>
 	</Platforms>
 	<ToolFiles>
+		<DefaultToolFile
+			FileName="fx.rules"
+		/>
 	</ToolFiles>
 	<Configurations>
 		<Configuration
@@ -22,7 +25,7 @@
 			IntermediateDirectory="$(SolutionDir)Build\$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="0"
-			ExcludeBuckets="3"
+			ExcludeBuckets="10"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -33,6 +36,9 @@
 				CommandLine=""
 				AdditionalDependencies=""
 				Outputs=""
+			/>
+			<Tool
+				Name="CompileShader"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -129,11 +135,14 @@
 				ExecutionBucket="3"
 			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"
+				Name="CompileShader"
 			/>
 			<Tool
 				Name="VCMIDLTool"
 				ExecutionBucket="4"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -239,11 +248,14 @@
 				ExecutionBucket="3"
 			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"
+				Name="CompileShader"
 			/>
 			<Tool
 				Name="VCMIDLTool"
 				ExecutionBucket="4"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -348,6 +360,9 @@
 				ExecutionBucket="3"
 			/>
 			<Tool
+				Name="CompileShader"
+			/>
+			<Tool
 				Name="VCXMLDataGeneratorTool"
 			/>
 			<Tool
@@ -427,6 +442,9 @@
 				CommandLine=""
 				AdditionalDependencies=""
 				Outputs=""
+			/>
+			<Tool
+				Name="CompileShader"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -764,34 +782,98 @@
 					<File
 						RelativePath=".\RunDir\resources\shaders\FixedMaterial.hlsl"
 						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="CompileShader"
+								Profile="18"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
-						RelativePath=".\RunDir\resources\shaders\Old Shaders\FixedMaterialComponents.h"
+						RelativePath=".\RunDir\resources\shaders\FixedMaterialComponents.hlsl"
 						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="CompileShader"
+								Profile="18"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath=".\RunDir\resources\shaders\HDRProcessor.hlsl"
 						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="CompileShader"
+								Profile="18"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath=".\RunDir\resources\shaders\SimpleShader.hlsl"
 						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="CompileShader"
+								Profile="18"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath=".\RunDir\resources\shaders\SkinTransform.hlsl"
 						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="CompileShader"
+								Profile="18"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath=".\RunDir\resources\shaders\SkyBox.hlsl"
 						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="CompileShader"
+								Profile="18"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath=".\RunDir\resources\shaders\SSOAProcessor.hlsl"
 						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="CompileShader"
+								Profile="18"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath=".\RunDir\resources\shaders\UIVertexShader.hlsl"
 						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="CompileShader"
+								Profile="18"
+							/>
+						</FileConfiguration>
 					</File>
 				</Filter>
 				<Filter
@@ -1688,11 +1770,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Source\ZEDS\ZEDefinitions.cpp"
+				RelativePath=".\Source\ZEDS\ZEDSDefinitions.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\ZEDS\ZEDefinitions.h"
+				RelativePath=".\Source\ZEDS\ZEDSDefinitions.h"
 				>
 			</File>
 			<File
@@ -2310,10 +2392,6 @@
 		</Filter>
 		<File
 			RelativePath=".\Changelog.txt"
-			>
-		</File>
-		<File
-			RelativePath=".\ClassDiagram1.cd"
 			>
 		</File>
 		<File
