svn path=/branches/v0.5.3-DeferredLightning/; revision=286

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -790,7 +790,7 @@
 						>
 					</File>
 					<File
-						RelativePath=".\RunDir\resources\shaders\UIVertexShader.hlsl"
+						RelativePath=".\RunDir\resources\shaders\UI.hlsl"
 						>
 					</File>
 				</Filter>
