--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -761,7 +761,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
@@ -774,7 +774,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
@@ -787,7 +787,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
@@ -800,7 +800,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
@@ -813,7 +813,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
@@ -826,7 +826,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
@@ -839,7 +839,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
@@ -852,7 +852,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
@@ -865,7 +865,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
@@ -878,7 +878,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
@@ -891,7 +891,7 @@
 							>
 							<Tool
 								Name="VCCustomBuildTool"
-								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;"
+								CommandLine="&quot;C:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Utilities\bin\x86\fxc.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 								Outputs="$(InputPath)"
 							/>
 						</FileConfiguration>
