svn path=/branches/v0.5.3-DeferredLightning/; revision=292

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -2033,6 +2033,14 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\Source\ZEDebug\ZEGraphicsDebugModule.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEDebug\ZEGraphicsDebugModule.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\ZEDebug\ZEMetaDebugModule.cpp"
 				>
 			</File>
